doc: Notes on using functions with arrays

--- a/javasriptNotes/testing.html
+++ b/javasriptNotes/testing.html
@@ -15,6 +15,23 @@
         }
 
         testFun('Hello', 'World');
+
+        // var sum = 0;
+        // function addSum(num) {
+        //     sum = sum + num;
+        // }
+        // addSum(3);
+
+        var changed = 0
+        function plusThree(num) {
+            return num + 3;
+        }
+        var answer = plusThree(5);
+
+        changed = plusThree(10);
+        console.log('changed:', changed)
+
+
     </script>
 </body>
 
