--- a/javasriptNotes/testing.html
+++ b/javasriptNotes/testing.html
@@ -31,6 +31,100 @@
         changed = plusThree(10);
         console.log('changed:', changed)
 
+        function testSize(num) {
+
+            if (num < 5) {
+                return "Tiny"
+            } else if (num < 10) {
+                return "Small"
+            } else if (num < 15) {
+                return "Large"
+            } else if (num >= 20) {
+                return "Huge"
+            } else {
+                return "Change Me";
+            }
+        }
+
+        testSize(7);
+
+        var names = ["Hole-in-one!", "Eagle", "Birdie", "Par", "Bogey", "Double Bogey", "Go Home!"];
+        function golfScore(par, strokes) {
+            // Only change code below this line
+            if (strokes == 1) {
+                return names[0]
+            } else if (strokes <= par - 2) {
+                return names[1]
+            } else if (strokes == par - 1) {
+                return names[2]
+            } else if (strokes == par) {
+                return names[3]
+            } else if (strokes == par + 1) {
+                return names[4]
+            } else if (strokes == par + 2) {
+                return names[5]
+            } else if (strokes >= par + 3) {
+                return names[6]
+            }
+
+            return "Change Me";
+        }
+
+        golfScore(5, 4);
+
+
+        function caseInSwitch(val) {
+            var answer = "";
+            switch (val) {
+                case 1:
+                    console.log("alpha")
+                    break
+                case 2:
+                    console.log("beta")
+                    break
+                case 3:
+                    console.log("gamma")
+                    break
+                case 4:
+                    console.log("delta")
+                    break
+            }
+            return answer;
+        }
+
+        caseInSwitch(4);
+
+        var count = 0;
+
+        function cc(card) {
+            switch (card) {
+                case 2:
+                case 3:
+                case 4:
+                case 5:
+                case 6:
+                    count++ // case result can just be count if it is meant to be count = count++
+                    break
+                // since 7-9 are at 0 you do not need to put them into the switch statement
+                case 10:
+                case 'J':
+                case 'Q':
+                case 'K':
+                case 'A':
+                    count--
+                    break
+            }
+
+            var holdbet = 'Hold';
+            if (count >= 1) {
+                holdbet = 'Bet';
+            }
+            return count + " " + holdbet; // we want to make a variable for the hold/ bet returns
+            // reminder that code stops after return in scope
+
+        }
+        cc(2); cc(3); cc(7); cc('K'); cc('A');
+
 
     </script>
 </body>
