--- a/javasriptNotes/testing.html
+++ b/javasriptNotes/testing.html
@@ -125,8 +125,172 @@
         }
         cc(2); cc(3); cc(7); cc('K'); cc('A');
 
+        // Using objects for lookup
+        function phoneticLookup(val) {
+            var result = "";
 
-    </script>
+            // Only change code below this line
+            var lookup = {
+                "alpha": "Adams",
+                "bravo": "Boston",
+                "charlie": "Chicago",
+                "delta": "Denver",
+                "echo": "Easy",
+                "foxtrot": "Frank",
+            };
+            result = lookup[val] // result searches inside the lookup object using the parameter val in the Phonetic function.
+            // Only change code above this line
+            return result;
+        }
+
+        phoneticLookup("charlie");
+
+        function pokemonLookup(num) {
+            var pokemon = "";
+
+            var pokedex = {
+                01: "Bulbasaur",
+                02: "Ivysaur",
+                03: "Venusaur",
+                04: "Charmander",
+                05: "Charmeleon",
+                06: "Charizard",
+                07: "Squirtle",
+                08: "Wartortle",
+                09: "Blastoise",
+                10: "Caterpie",
+            };
+            pokemon = pokedex[num]
+            return pokemon
+        };
+
+        pokemonLookup();
+
+        /* Modify the function checkObj to test if an object passed to the 
+        function (obj) contains a specific property (checkProp). If the 
+        property is found, return that property's value. If not, return 
+        "Not Found". */
+        function checkObj(obj, checkProp) { // object, property to check for
+            // Only change code below this line
+            if (obj.hasOwnProperty(checkProp)) {// if obj passed in has property checkProp
+                return obj[checkProp]; // return teh vallue of the property
+            } else {
+                return "Not Found";
+            }
+
+            // should work for any object
+            // Only change code above this line
+        };
+
+        // Setup
+        var recordCollection = {
+            2548: {
+                albumTitle: 'Slippery When Wet',
+                artist: 'Bon Jovi',
+                tracks: ['Let It Rock', 'You Give Love a Bad Name']
+            },
+            2468: {
+                albumTitle: '1999',
+                artist: 'Prince',
+                tracks: ['1999', 'Little Red Corvette']
+            },
+            1245: {
+                artist: 'Robert Palmer',
+                tracks: []
+            },
+            5439: {
+                albumTitle: 'ABBA Gold'
+            }
+        };
+
+        // Only change code below this line
+        function updateRecords(records, id, prop, value) {
+
+            if (prop !== 'tracks' && value !== "") { // If prop isn't tracks and value isn't an empty string, 
+                records[id][prop] = value; // update or set that album's prop to value.
+            } else if (prop === 'tracks' && records[id].hasOwnProperty('tracks') === false) { // If prop is tracks but the album doesn't have a tracks property, 
+                records[id][prop] = [value]; // create an empty array and add value to it.
+            } else if (prop === 'tracks' && value !== "") { // If prop is tracks and value isn't an empty string, 
+                records[id][prop].push(value);// add value to the end of the album's existing tracks array.
+            } else if (value === "") { // If value is an empty string, 
+                delete records[id][prop] // delete the given prop property from the album.
+            }
+            return records;
+        }
+
+        updateRecords(recordCollection, 5439, 'artist', 'ABBA');
+
+        /*
+        // shortened if else statement
+        function updateRecords(records, id, prop, value) {
+            if (value === "") delete records[id][prop];
+            else if (prop === 'tracks') {
+                records[id][prop] = records[id][prop] || [];
+                records[id][prop].push(value);
+            } else {
+                records[id][prop] = value;
+            }
+            return records;
+        }
+        updateRecords(recordCollection, 5439, 'artist', 'ABBA');
+        */
+
+        // Your function must always return the entire record collection object.
+        // factorial product of the interger and all the interger under it. 5 * 4 * 3  * 2 * 1
+
+        // Using Recursion
+        var factorial = function fac(num) { // whatever num put in will have the factorial
+            if (num === 1) { // will put an end to the loop
+                return 1;
+            }
+            return num * fac(num - 1);
+        };
+        var final = factorial(5);
+        console.log(final);
+
+        // Setup
+        var contacts = [
+            {
+                "firstName": "Akira",
+                "lastName": "Laine",
+                "number": "0543236543",
+                "likes": ["Pizza", "Coding", "Brownie Points"]
+            },
+            {
+                "firstName": "Harry",
+                "lastName": "Potter",
+                "number": "0994372684",
+                "likes": ["Hogwarts", "Magic", "Hagrid"]
+            },
+            {
+                "firstName": "Sherlock",
+                "lastName": "Holmes",
+                "number": "0487345643",
+                "likes": ["Intriguing Cases", "Violin"]
+            },
+            {
+                "firstName": "Kristian",
+                "lastName": "Vos",
+                "number": "unknown",
+                "likes": ["JavaScript", "Gaming", "Foxes"]
+            }
+        ];
+
+
+        function lookUpProfile(name, prop) { // check if name is an actual contacts firstName and given prop is a property of that contact
+            for (let i = 0; i < contacts.length; i++) {
+                if (contacts[i].firstName === name) {
+                    return contacts[i][prop] || "No such property";
+                }
+            }
+            return "No such contact"
+        }
+
+        lookUpProfile("Akira", "likes");
+
+
+
+    </script>/
 </body>
 
 </html>
